# arjun-backend

./: .gitignore  Dockerfile  README.md  alternatives.csv  app.py  draft.py  example.env  lol.json  lol.py  main.py  ossalt.html  ossalt_parser.py  osssalt.json  pyproject.toml  requirements.txt  test.json  test.xml  x2d.py
auth/: verify.py
infra/: .gitignore  arjun.conf  test.conf  tf.tf
qa/: endpoints.py  models.py
qa/utils/: database.py  keyword_generator.py  lang_detector.py  prompts.py  query_generator.py  rank.py  search.py  summarize.py
qa/utils/git_services/: gitee_api.py  gitflame_api.py  gitflic_api.py  github_api.py  gitlab_api.py  gitverse_api.py  launchpad_api.py  moshub_api.py
tests/: test_lol.py  test_main.py
utils/: logger.py
