[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["pptx704 <rafeedm.bhuiyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.110.0", extras = ["uvicorn"]}
serpapi = "^0.1.5"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
xmltodict = "^0.13.0"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
openai = "^1.14.2"
supabase = "^2.4.0"
httpx = "^0.24.0"
scikit-learn = "^1.4.1.post1"
python-gitlab = "^4.4.0"
pytest = "^8.1.1"
selenium = "^4.21.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
